deploy/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-hello
  labels:
    app: quarkus-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-hello
  template:
    metadata:
      labels:
        app: quarkus-hello
    spec:
      containers:
        - name: quarkus-hello
          image: >-
            image-registry.openshift-image-registry.svc:5000/devops-practice/quarkus-hello
          ports:
            - containerPort: 8080
              protocol: TCP
