deploy/base/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: quarkus-hello
  labels:
    app: quarkus-hello
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: quarkus-hello
