deploy/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-hello
  labels:
    app: quarkus-hello
spec:
  to:
    kind: Service
    name: quarkus-hello
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
